Bug 123534 - Impress UI: Expand/Collapse custom animations changes selection state
Summary: Impress UI: Expand/Collapse custom animations changes selection state
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.1.0.3 release
Hardware: All All
: medium normal
Assignee: Brian Fraser
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-18 05:46 UTC by Brian Fraser
Modified: 2019-03-13 20:38 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Brian Fraser 2019-02-18 05:46:21 UTC
Description:
In an Impress presentation with custom animations of a bulletet list:
1. Expanding a selected animation does not select its children as well.
2. Collapsing an expanded animation deselects all but the last selected animation.


Steps to Reproduce:
1. Create presentation with animated bulleted list with multiple levels of indentation, and one or more additional objects with a custom-animation.
2. Ensure the list collapsed.
3. Select the collapsed parent animation for the list, and an additional animated object.
4. Expand the list.
5. Collapse the list.

Actual Results:
After 4 (expand): only parent element of the list and the additionally animated object are selected (not the child animations)

After 5 (collapse): only the most recently selected animation is selected: all others are deselected.

Expected Results:
After 4 (expand): expect to have all child elements of the animation also selected.

After 5 (collapse): expect to have no change in the selection state (other than not showing any selection for now-hidden child animations for the list).


Reproducible: Always


User Profile Reset: No



Additional Info:
The expected behaviour on expand would be in keeping with the notion that selecting a collapsed head of a list also selects its children. This notion is seen elsewhere with animations when you select a collapsed head of a list and:
- change animation order via drag-and-drop, 
- change animation order via the up/down buttons, or 
- change the start behaviour (like "on click" or "with previous")
Comment 1 Jim Raykowski 2019-02-19 20:58:13 UTC
Reproduced with

Version: 6.3.0.0.alpha0+
Build ID: b1d6c1c21215b4d039cc956a949a789e51129604
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Commit Notification 2019-02-21 19:00:11 UTC
Brian Fraser committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/d3fdd9f12ba698008515bfdc47c5f96318406d7f%5E%21

tdf#123534 Impress collapse/expand animation maintains selection

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.