tdf#123534 Impress collapse/expand animation maintains selection

- Expandened a selected bulleted list's animations now
  selects children (maintaining the selection behaviour).
- Collapsing a bulleted list's animation no longer
  clears the current selections
- Deselecting animations now refreshed the UI correctly

Change-Id: I3a3ca0eb0efe841784d96d5dc8e1b760dea4f777
Reviewed-on: https://gerrit.libreoffice.org/67947
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>